tests/invalid/unknown_symbol.ri
enum MyEnum {
    Musk
}

fn main() void {
    unknown_fn();
    let x = UnknownStruct();
    let z = unknown_var;
    _ = MyEnum::Mark;
}
