tests/invalid/unknown_symbol.out
tests/invalid/unknown_symbol.ri:6:5: error: cannot find `unknown_fn` in this scope
tests/invalid/unknown_symbol.ri:7:13: error: cannot find `UnknownStruct` in this scope
tests/invalid/unknown_symbol.ri:8:13: error: cannot find `unknown_var` in this scope
tests/invalid/unknown_symbol.ri:9:17: error: enum `MyEnum` has no value `Mark`
rivetc: error: could not compile package `unknown_symbol`, aborting due to 4 previous errors